added: og image

--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,12 @@
     />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/kite.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
+    <meta property="og:image" content="%PUBLIC_URL%/kite.png" />
     <title>Kite</title>
   </head>
   <body>
